== 1.3.1 ==

* Improved domains table

== 1.3 ==

* Reworked the multi-domains plugin to work from plugins directory
* Implemented functionality to auto copy/upgrade sunrise.php file

== 1.2.3 ==

* Updated the sunrise.

== 1.2.2 ==

* Updating sunrise.
* Forcing empty values existence.

== 1.2.1 ==

* Placement script scoping.
* Blog selection issue fix.

== 1.2 ==

* Domains site search.
* Stuck transients issue fix.
* BuddyPress cross-domain login issue fix.

== 1.1.6 ==

* Better selection block placement.

== 1.1.5 ==

* Fix for new site creation on sub-blogs.

== 1.1.4 ==

* Fix for re-auth required on first login issue.

== 1.1.3 ==

* Enhancement: performance improvements
* Bug fix: incorrect domain used on site creation in network admin

== 1.1.2 ==

* New Feature: Option to enable/disable single sign-on

== 1.1.1 ==

* Enhancement: 3.1+ compatibility
* Enhancement: Allow disabling cross domain login with a constant

== 1.1 ==

* Enhancement: More extensible code with new hooks and structure
* Bug fix: Allow www in mapped domain name

== 1.0.9 ==

* Enhancement: Better compatibility with Domain Mapping for subdomain installs

== 1.0.8 ==

* Enhancement: Keep selected domain after signup error
* Enhancement: Don't redirect to main site when a multi-domain is also a mapped domain
* Enhancement: Don't display php error when sunrise.php does not find any multi-domain
* Bug fix: Domain Mapping sunrise.php overwriting the global $current_site
* Bug fix: Cookies stylesheets return 404

== 1.0.7 ==

* Bug fix: domain choice field does not appear on site admin sites page
* Enhancement: check if COOKIE_DOMAIN is already defined

== 1.0.6 ==

* Bug fix: domain choice field appears on site admin blog edit page
* Bug fix: improper redirection when the main site url start with www
* Bug fix: authentification cookie not set when uppercase letters in the domain name
* Enhancement: display domain names in alphabetical order

== 1.0.5 ==
