@@ -1,6 +1,8 @@
 == 1.3.1 ==
 
-* Improved domains table
+* Reworked network admin domains page
+* Improved performance for case when a lot domains are added
+* Fixed minor issues
 
 == 1.3 ==
 
